[package]
name = "kv6"
version = "0.1.0"
edition = "2021"
description = "A Redis-like KV database written in Rust (kv6 - enhanced version)"

[[bin]]
name = "kv6-server"
path = "src/main.rs"

[[bin]]
name = "kv6-cli"
path = "src/cli.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "5"
chrono = "0.4"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1"
parking_lot = "0.12"
rand = "0.8"